<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BaseApplication</string>
    <string name="text_login">登 陆</string>
    <string name="text_regist">注 册</string>
    <string name="homepage">首页</string>
    <string name="myads">我的广告</string>
    <string name="myscreen">我的屏幕</string>
    <string name="mine">我</string>
    <string name="reportforms">报表</string>
    <string name="text_landscape">横屏模板</string>
    <string name="text_vertical">竖屏模板</string>
    <string name="templateselection">模板选择</string>
    <string name="ADtemplates">广告模板</string>
    <string name="browsingEffect">模板浏览效果</string>
    <string name="bt_goshoping">购买</string>
    <string name="bt_use">使用</string>
    <string name="TextADname">广告名称</string>
    <string name="TextADIndustrry">广告行业</string>
    <string name="TextADUrgentAudit">加急审核</string>
    <string name="TextScreenDirection">屏幕方向</string>
    <string name="TextAdStyle">广告类型</string>
    <string name="next">下一步</string>
    <string name="picture">图片</string>
    <string name="video">视频</string>
    <string name="landscape">横屏</string>
    <string name="verticalscreen">竖屏</string>
    <string name="hit1">★温馨提示：选择后不可修改</string>
    <string name="hit2">★温馨提示：建议上传分辨率为1920×1080的图片</string>
    <string name="makeAD">制作广告</string>
    <string name="addscreen">添加屏幕</string>
    <string name="mywallet">我的钱包</string>
    <string name="recharge">立即充值</string>
    <string name="screeninteraction">屏频互动</string>
    <string name="authentication">身份认证</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PersonalIdentification">个人身份认证</string>
    <string name="EnterpriseUserAuthentication">企业用户认证</string>
    <string name="truename">请输入真实姓名</string>
    <string name="truephonenumber">请输入手机号码</string>
    <string name="identitytext01">请拍照并上传身份证正反面及手持身份证照片</string>
    <string name="identitytext02">拍照时确保身份证边框完整.字体清晰.亮度均匀</string>
    <string name="Applicationforcertification">申请认证</string>
    <string name="mTitleBarRecarge">充值</string>
    <string name="Modeofpayment">支付方式</string>
    <string name="alipay">支付宝</string>
    <string name="WeChat">微信</string>
    <string name="myShoppingCart">我的购物车</string>
    <string name="cleaning">立即结算</string>
    <string name="find">查找</string>
    <string name="MyCoupon">我的优惠券</string>
    <string name="NoUse">无可用</string>
    <string name="addmoney">立即支付</string>
    <string name="ShoppingCart">购物车</string>
    <string name="advertising">投放广告</string>
    <string name="beginTime">开始时间</string>
    <string name="closeTime">结束时间</string>
    <string name="CallWaiting">插播</string>
    <string name="select">选择</string>
    <string name="fifteenminute">15分钟</string>
    <string name="thirtyminute">30分钟</string>
    <string name="fortyfiveminute">45分钟</string>
    <string name="sixtyminute">60分钟</string>
    <string name="putindate">投放天数：0天</string>
    <string name="common">普通</string>
    <string name="putinByMyself">自投</string>
    <string name="broadcastTime">播放时长</string>
    <string name="selectAdress">选择地址</string>
    <string name="continueAdd">继续投放</string>
    <string name="radial_time_picker_result_value">%1$d:%2$d</string>
    <string name="dialog_dismissed">Dialog dismissed</string>
    <string name="range">范围</string>
    <string name="sort">分类</string>
    <string name="order">排序</string>
    <string name="detialAddress">查看详情位置</string>
    <string name="addshopping">加入购物车</string>
    <string name="endtime">结束日期</string>

</resources>