<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/   "
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lzhs.com.baseapplication.module.menu.myads.make.delegate.formework.UseActivity">

    <lzhs.com.library.widget.views.TitleBar
        android:id="@+id/UseTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftColor="@color/white"
        app:titleText="@string/ADtemplates" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="117px">

        <TextView
            style="@style/TextViewStytle"
            android:layout_width="157px"
            android:text="@string/TextADname" />

        <EditText
            android:id="@+id/mETPutAdName"
            style="@style/EditextViewStyle"
            android:layout_height="61px"
            android:layout_gravity="center"
            android:layout_marginRight="61px"
            android:background="@drawable/admoudle"
            android:hint="输入广告名称"
            android:gravity="right|center_vertical"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <View
        android:id="@+id/mView01"
        style="@style/LineStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="117px">

        <TextView
            style="@style/TextViewStytle"
            android:layout_width="157px"
            android:text="@string/TextADIndustrry" />
    </LinearLayout>

    <View
        style="@style/LineStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="117px">

        <TextView
            style="@style/TextViewStytle"
            android:layout_width="157px"
            android:text="@string/TextADIndustrry" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1">

            <CheckBox
                android:button="@null"
                android:drawableLeft="@drawable/selector_rb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="104px"
                android:text="加急"
                android:textColor="#97A9C6" />
        </RelativeLayout>


    </LinearLayout>
    <View
        style="@style/LineStyle" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="99px"
        >
        <TextView
            android:id="@+id/te"
            style="@style/TextViewStytle"
            android:layout_width="157px"
            android:text="@string/TextAdStyle" />

           <RadioGroup
               android:paddingRight="104px"
               android:gravity="right"
               android:layout_weight="1"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:orientation="horizontal">

               <RadioButton
                   android:id="@+id/mRadioImag"
                   android:button="@null"
                   android:drawableLeft="@drawable/selector_rb"
                   android:paddingRight="103px"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/picture"
                   android:textColor="#97A9C6" />

               <RadioButton
                   android:id="@+id/mRadioVido"
                   android:button="@null"
                   android:drawableLeft="@drawable/selector_rb"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:checked="true"
                   android:text="@string/video"
                   android:textColor="#97A9C6" />
           </RadioGroup>

    </LinearLayout>
    <TextView
        android:textColor="@color/red"
        android:text="@string/hit2"
        android:textSize="18px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <View
        style="@style/LineStyle" />

    <Button
        style="@style/StyleButtonCommon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="202px"
        android:background="@drawable/shap_btn_green"
        android:text="@string/next" />


</LinearLayout>
