<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lzhs.com.baseapplication.module.menu.myads.putin.PutInStyleActivity">
    <lzhs.com.library.widget.views.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftColor="@color/white"
        app:titleText="@string/advertising" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="99px"
        >
        <TextView

            style="@style/TextViewStytle"
            android:layout_width="157px"
            android:text="@string/TextAdStyle" />

        <RadioGroup
            android:id="@+id/RGADstyle"
            android:paddingRight="104px"
            android:gravity="right"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/mRBCommon"
                android:button="@null"
                android:drawableLeft="@drawable/selector_rb"
                android:paddingRight="103px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common"
                android:textColor="#97A9C6" />

            <RadioButton
                android:id="@+id/mRBputinByMyself"
                android:button="@null"
                android:drawableLeft="@drawable/selector_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/putinByMyself"
                android:textColor="#97A9C6" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/mLinStartAndEndtime"
        android:layout_marginTop="81px"
        android:layout_width="match_parent"
        android:layout_height="58px"
        android:orientation="horizontal">
        <TextView

            style="@style/TextViewStytle"
            android:layout_width="157px"
            android:text="@string/beginTime" />
        <RelativeLayout
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/selector_mlinearlayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_centerHorizontal="true"
                android:id="@+id/fvjjv"
                android:text="2017_07-22"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                style="@style/TextViewStytle"
                />
            <ImageView

                android:layout_alignRight="@id/fvjjv"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="25px"
                android:layout_height="17px"
                android:src="@mipmap/login_logo"
                style="@style/ImageViewStyle" />
        </RelativeLayout>

        <TextView
            android:layout_width="157px"
            style="@style/TextViewStytle"
            android:text="@string/closeTime" />
        <RelativeLayout
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/selector_mlinearlayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_centerHorizontal="true"
                android:id="@+id/fvjjc"
                android:text="2017_07-22"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                style="@style/TextViewStytle"
                />
            <ImageView
                android:layout_alignRight="@id/fvjjc"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="25px"
                android:layout_height="17px"
                android:src="@mipmap/login_logo"
                style="@style/ImageViewStyle" />
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:visibility="gone"
        android:id="@+id/mTextPutinDates"
        style="@style/TextViewStytle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18px"
        android:gravity="left|center_vertical"
        android:text="@string/putindate" />
    <View
        style="@style/LineStyle" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="117px">

        <TextView
            style="@style/TextViewStytle"
            android:layout_width="157px"
            android:text="@string/CallWaiting" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/CKSeleck"
                android:button="@null"
                android:drawableLeft="@drawable/selector_rb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="104px"
                android:text="@string/select"
                android:textColor="#97A9C6" />
        </RelativeLayout>


    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/mLinCallWaitingTime"
        android:layout_marginTop="79px"
        android:layout_width="match_parent"
        android:layout_height="58px"
        android:orientation="horizontal">
        <TextView
            style="@style/TextViewStytle"
            android:layout_width="157px"
            android:text="@string/beginTime" />
        <RelativeLayout
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/selector_mlinearlayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_centerHorizontal="true"
                android:id="@+id/mTextWaitBegin"
                android:text="2017_07-22"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                style="@style/TextViewStytle"
                />
            <ImageView
                android:layout_alignRight="@id/mTextWaitBegin"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="25px"
                android:layout_height="17px"
                android:src="@mipmap/login_logo"
                style="@style/ImageViewStyle" />
        </RelativeLayout>

        <TextView
            android:visibility="invisible"
            android:layout_width="157px"
            style="@style/TextViewStytle"
           />
        <RelativeLayout

          android:gravity="center"  android:layout_weight="1"
            android:background="@drawable/selector_mlinearlayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_centerHorizontal="true"
                android:id="@+id/mTextWaitBeginHour"
                android:text="23:00"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                style="@style/TextViewStytle"
                />
            <ImageView
                android:layout_alignRight="@id/mTextWaitBeginHour"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="25px"
                android:layout_height="17px"
                android:src="@mipmap/login_logo"
                style="@style/ImageViewStyle" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/mLinCallWaitingSelectTime"
        android:layout_marginTop="65px"
        android:layout_width="match_parent"
        android:layout_height="58px"
        android:orientation="horizontal">
        <TextView
            style="@style/TextViewStytle"
            android:layout_width="157px"
            android:text="@string/broadcastTime"/>
        <RadioGroup
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/RBfifteenminute"
                android:checked="true"
                android:text="@string/fifteenminute"
                android:layout_weight="1"
                style="@style/RadioButtonViewPStyle"/>
            <RadioButton
                android:id="@+id/RBthirtyminute"
                android:text="@string/thirtyminute"
                android:layout_weight="1"
                style="@style/RadioButtonViewPStyle"/>
            <RadioButton
                android:id="@+id/RBfortyfiveminute"
                android:text="@string/fortyfiveminute"
                android:layout_weight="1"
                style="@style/RadioButtonViewPStyle"/>
            <RadioButton
                android:id="@+id/RBsixtyminute"
                android:text="@string/sixtyminute"
                android:layout_weight="1"
                style="@style/RadioButtonViewPStyle"/>
        </RadioGroup>
    </LinearLayout>
    <View style="@style/LineStyle" />
    <Button
        android:id="@+id/BTSelectAddress"
        android:layout_marginTop="50px"
        android:background="@drawable/shap_btn_use"
        android:text="@string/selectAdress"
       style="@style/StyleButtonCommon"/>
</com.zhy.autolayout.AutoLinearLayout>
