<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lzhs.com.baseapplication.module.menu.myads.make.delegate.formework.SomehowScreenActivity">
    <lzhs.com.library.widget.views.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftColor="#ccc"
        app:titleText="@string/templateselection" />
    <LinearLayout
        android:layout_marginTop="15px"
        android:layout_width="236px"
        android:layout_height="58px"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_landscape"
            android:textSize="22px"
            android:gravity="center"
            android:layout_gravity="center"/>
        <ImageView
            style="@style/ImageViewLinearlayout"
            android:src="@mipmap/icon_home_unselected"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/TVlandscape"
        android:layout_marginTop="33px"
        android:layout_gravity="center"
        android:layout_width="564px"
        android:layout_height="318px"
        android:background="@color/Screenblue"/>
    <LinearLayout
        android:layout_marginTop="63px"
        android:layout_width="236px"
        android:layout_height="58px"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_vertical"
            android:textSize="22px"
            android:gravity="center"
            android:layout_gravity="center"/>
        <ImageView
            android:id="@+id/mImageHomePage"
            style="@style/ImageViewLinearlayout"
            android:src="@mipmap/icon_home_unselected"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/TVverticalScreen"
        android:layout_marginTop="33px"
        android:layout_gravity="center"
        android:layout_width="324px"
        android:layout_height="575px"
        android:background="@color/Screenblue"/>
</com.zhy.autolayout.AutoLinearLayout>
